Enable using APM for performance stats.

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "css-loader": "^3.4.2",
     "csurf": "^1.10.0",
     "dotenv": "^8.2.0",
+    "elastic-apm-node": "^3.3.0",
     "email-templates": "^7.1.0",
     "event-stream": "^4.0.1",
     "express": "^4.17.1",
