Add elasticsearch logging.

--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "webpack-node-externals": "^1.7.2",
     "winston": "git://github.com/winstonjs/winston.git#80d343939facdab4eb4aa315cb061c75a3f77549",
     "winston-cloudwatch": "^2.5.2",
+    "winston-elasticsearch": "0.8.8",
     "winston-loggly-bulk": "^3.1.0"
   },
   "devDependencies": {
