--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prettier-head": "prettier --write $(git diff HEAD --name-only | grep -E '.js$')",
     "eslint": "eslint --no-error-on-unmatched-pattern --quiet `npm run --silent list-files`",
     "lint": "npm run prettier-base -- --check && npm run eslint",
-    "nodemon": "nodemon --ignore src --ignore public --ignore private --ignore dist/pages --ignore __tests__",
+    "nodemon": "nodemon -V --ignore src --ignore public --ignore private --ignore dist/pages --ignore __tests__",
     "webpack": "webpack --mode development --config webpack.server.js",
     "webpack-dev-server": "webpack-dev-server --config webpack.dev.js",
     "test-loud": "jest --detectOpenHandles  --coverage",
@@ -25,7 +25,7 @@
     "devstart": "npm run nearley && npm run nodemon & npm run webpack-dev-server & npm run webpack -- --watch",
     "setup": "npm run nearley && npm run webpack -- --progress && node --max-old-space-size=4096 force_update.js",
     "cards": "node --max-old-space-size=4096 force_update.js",
-    "start": "npm install && node force_update.js && nodemon -x 'node app.js || touch app.js'",
+    "start": "npm install && nodemon -x 'node app.js || touch app.js'",
     "run-daily-jobs": "sh jobs/definition/daily.sh",
     "run-weekly-jobs": "sh jobs/definition/weekly.sh",
     "run-monthly-jobs": "sh jobs/definition/monthly.sh",
@@ -54,6 +54,7 @@
     "bad-words": "^3.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bufferutil": "^4.0.1",
     "canvas": "^2.6.1",
     "chart.js": "^2.9.4",
     "cheerio": "^1.0.0-rc.10",
@@ -114,6 +115,7 @@
     "react-latex": "^2.0.0",
     "react-leaf-carousel": "^2.0.0",
     "react-markdown": "^5.0.2",
+    "react-native": "^0.64.2",
     "react-pivottable": "^0.9.0",
     "react-player": "^2.6.1",
     "react-qr-code": "^1.1.1",
@@ -139,9 +141,11 @@
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^3.0.1",
     "tmp": "^0.1.0",
+    "typescript": "^4.3.5",
     "unified": "^9.2.0",
     "unist-util-visit": "^2.0.3",
     "use-scroll-position": "0.0.4",
+    "utf-8-validate": "^5.0.2",
     "uuid": "^3.4.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.10",
@@ -163,7 +167,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "form-data": "^3.0.0",
     "jest": "^26.0.1",
     "mongodb-memory-server": "^6.9.6",
