--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "dotenv": "^8.2.0",
     "email-templates": "^8.0.7",
     "event-stream": "^4.0.1",
+    "events": "^3.3.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.9",
     "express-messages": "^1.0.1",
@@ -123,6 +124,7 @@
     "react-tagcloud": "^2.0.0",
     "react-timeago": "^4.4.0",
     "reactstrap": "^8.0.1",
+    "redis": "^3.1.2",
     "remark-autolink-headings": "^6.0.1",
     "remark-breaks": "^2.0.1",
     "remark-gfm": "^1.0.0",
@@ -136,12 +138,15 @@
     "seedrandom": "^3.0.5",
     "serialize-javascript": "^3.1.0",
     "shuffle-seed": "^1.1.6",
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^3.0.1",
     "tmp": "^0.1.0",
     "unified": "^9.2.0",
     "unist-util-visit": "^2.0.3",
     "use-scroll-position": "0.0.4",
+    "util": "^0.12.4",
     "uuid": "^3.4.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.10",
