--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "test": "npm run test-loud -- --silent",
     "test:watch": "npm run webpack -- --watch & npm run test-loud -- --watch --verbose false",
     "nearley": "sh nearley/helper.sh",
-    "build": "export NODE_OPTIONS=--max_old_space_size=16000 && npm run nearley && node_modules/.bin/webpack --mode production --config webpack.prod.js --progress",
-    "devstart": "npm run nearley && npm run nodemon & npm run webpack-dev-server & npm run webpack -- --watch",
+    "build": "export NODE_OPTIONS=--max_old_space_size=16000 && npm run nearley && npm run sass && node_modules/.bin/webpack --mode production --config webpack.prod.js --progress",
+    "devstart": "npm run nearley && npm run sass -- --watch & npm run nodemon & npm run webpack-dev-server & npm run webpack -- --watch",
     "setup": "npm run nearley && npm run webpack -- --progress && node --max-old-space-size=4096 force_update.js",
     "cards": "node --max-old-space-size=4096 force_update.js",
     "start": "npm install && node force_update.js && nodemon -x 'node app.js || touch app.js'",
+    "sass": "sass scss:public/css/bootstrap --no-source-map",
     "run-daily-jobs": "sh jobs/definition/daily.sh",
     "run-weekly-jobs": "sh jobs/definition/weekly.sh",
     "run-monthly-jobs": "sh jobs/definition/monthly.sh",
@@ -54,6 +55,7 @@
     "bad-words": "^3.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.1.3",
     "canvas": "^2.6.1",
     "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
@@ -132,6 +134,7 @@
     "rss": "^1.2.2",
     "rss-parser": "^3.9.0",
     "sanitize-html": "^2.3.2",
+    "sass": "^1.44.0",
     "seedrandom": "^3.0.5",
     "serialize-javascript": "^3.1.0",
     "shuffle-seed": "^1.1.6",
