--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "eslint": "eslint --no-error-on-unmatched-pattern --quiet `npm run --silent list-files`",
     "lint": "npm run prettier-base -- --check && npm run eslint",
     "nodemon": "nodemon --ignore src --ignore public --ignore private --ignore dist/pages --ignore __tests__",
-    "webpack": "webpack --mode development --config webpack.server.js",
-    "webpack-dev-server": "webpack-dev-server --config webpack.dev.js",
+    "webpack": "webpack --max-old-space-size=8192 --mode development --config webpack.server.js",
+    "webpack-dev-server": "node --max-old-space-size=8192 node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.dev.js",
     "test-loud": "jest --detectOpenHandles  --coverage",
     "test": "npm run test-loud -- --silent",
     "test:watch": "npm run webpack -- --watch & npm run test-loud -- --watch --verbose false",
