migrate to sharp over canvas

--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "@react-mock/fetch": "^0.3.0",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.4",
-    "JSONStream": "^1.3.5",
     "assert": "^2.0.0",
     "aws-sdk": "^2.814.0",
     "babel-eslint": "^10.1.0",
@@ -56,7 +55,6 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
-    "canvas": "^2.8.0",
     "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
@@ -84,6 +82,7 @@
     "jquery-ui": "^1.13.0",
     "jquery-ui-dist": "^1.12.1",
     "jsdom": "^16.2.2",
+    "JSONStream": "^1.3.5",
     "micromark": "^2.10.1",
     "mongoose": "^5.12.10",
     "mongoose-seed": "^0.6.0",
@@ -139,6 +138,7 @@
     "sass": "^1.44.0",
     "seedrandom": "^3.0.5",
     "serialize-javascript": "^3.1.0",
+    "sharp": "^0.29.3",
     "shuffle-seed": "^1.1.6",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
