--- a/package.json
+++ b/package.json
@@ -146,10 +146,7 @@
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2",
-    "webpack-node-externals": "^1.7.2",
-    "winston": "^3.4.0",
-    "winston-cloudwatch": "^2.5.2",
-    "winston-loggly-bulk": "^3.1.0"
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
