--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@react-mock/fetch": "^0.3.0",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.4",
+    "JSONStream": "^1.3.5",
     "assert": "^2.0.0",
     "aws-sdk": "^2.814.0",
     "babel-eslint": "^10.1.0",
@@ -57,6 +58,7 @@
     "bootstrap": "^5.1.3",
     "canvas": "^2.8.0",
     "chart.js": "^2.9.4",
+    "cheerio": "^1.0.0-rc.10",
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
@@ -82,7 +84,6 @@
     "jquery-ui": "^1.13.0",
     "jquery-ui-dist": "^1.12.1",
     "jsdom": "^16.2.2",
-    "JSONStream": "^1.3.5",
     "micromark": "^2.10.1",
     "mongoose": "^5.12.10",
     "mongoose-seed": "^0.6.0",
