--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test": "npm run test-loud -- --silent",
     "test:watch": "npm run webpack -- --watch & npm run test-loud -- --watch --verbose false",
     "nearley": "sh nearley/helper.sh",
-    "build": "export NODE_OPTIONS=--max_old_space_size=16000 && npm run nearley && npm run sass && node_modules/.bin/webpack --mode production --config webpack.prod.js --progress",
+    "ci-build": "export NODE_OPTIONS=--max_old_space_size=16000 && npm run nearley && npm run sass && node_modules/.bin/webpack --mode production --config webpack.prod.js",
+    "build": "npm run ci-build -- --progress",
     "devstart": "npm run nearley && npm run sass -- --watch & npm run nodemon & npm run webpack-dev-server & npm run webpack -- --watch",
     "setup": "npm run nearley && npm run webpack -- --progress && node --max-old-space-size=4096 force_update.js",
     "cards": "node --max-old-space-size=4096 force_update.js",
