--- a/.ebextensions/02_modify_nginx.config
+++ b/.ebextensions/02_modify_nginx.config
@@ -25,6 +25,14 @@
 ###################################################################################################
 
 files:
+   /etc/nginx/conf.d/websockets.conf:
+     mode: "000755"
+     owner: root
+     group: root
+     content: |
+       proxy_set_header        Upgrade         $http_upgrade;
+       proxy_set_header        Connection      "upgrade";
+
    /etc/nginx/conf.d/proxy.conf:
      owner: root
      group: root
