--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^3.0.1",
     "tmp": "^0.1.0",
+    "turndown": "^7.1.1",
     "unified": "^9.2.0",
     "unist-util-visit": "^2.0.3",
     "use-scroll-position": "0.0.4",
