--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "private": true,
   "main": "app.js",
+  "engines" : { 
+    "node" : ">=12.0.0 <13.0.0"
+  },
   "scripts": {
     "bash": "bash",
     "beautify": "npm run prettier",
