--- a/.env_EXAMPLE
+++ b/.env_EXAMPLE
@@ -1,15 +1,27 @@
-EMAIL_CONFIG_USERNAME=""
+AWS_ACCESS_KEY_ID=""
+AWS_LOG_GROUP="CUBECOBRA"
+AWS_LOG_STREAM="local"
+AWS_REGION="us-east-2"
+AWS_SECRET_ACCESS_KEY=""
+CUBECOBRA_VERSION="x.x.x"
+DATA_BUCKET="cubecobra-data-dev"
+DOMAIN="localhost:8080"
+DOWNTIME_ACTIVE="false"
+DYNAMO_PREFIX="DEV"
 EMAIL_CONFIG_PASSWORD=""
-TCG_PLAYER_PUBLIC_KEY=""
-TCG_PLAYER_PRIVATE_KEY=""
-SESSION_SECRET="session_secret"
-MONGODB_URL="mongodb://127.0.0.1:27017/nodecube"
-SECRET="secret"
-DBNAME="nodecube"
-SESSION="session"
+EMAIL_CONFIG_USERNAME=""
+ENV="development"
 FLASKROOT="http://167.172.233.110"
+HOST="https://cubecobra.com"
+LOG_RETENTION_DAYS="7"
+NITROPAY_ENABLED="false"
+NODE_ENV="development"
 PORT="5000"
-HOST="http://127.0.0.1:5000"
-CUBECOBRA_VERSION="3.4.1"
+REDIS_HOST="redis://localhost:6379"
+REDIS_SETUP="true"
+SECRET="secret"
+SESSION_SECRET="session_secret"
+SESSION="session"
+TCG_PLAYER_PRIVATE_KEY=""
+TCG_PLAYER_PUBLIC_KEY=""
 USE_S3="false"
-NOTICE=""
