--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -33,10 +33,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
   
-      - name: Node ${{ matrix.node-version }}
+      - name: Node 12
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 12
 
       - name: Installing NPM
         run: npm install
