--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Setup
-      run: npm install
+      run: npm install --legacy-peer-deps
     - name: Build
       run: npm run ci-build
     - name: Check Code Style
