--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -33,13 +33,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
   
-      - name: Node 12
+      - name: Node 16
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 16
 
       - name: Installing NPM
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Building application
         run: npm run ci-build
