--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "test": "npm run test-loud -- --silent",
     "test:watch": "npm run webpack -- --watch & npm run test-loud -- --watch --verbose false",
     "nearley": "sh nearley/helper.sh",
-    "ci-build": "export NODE_OPTIONS=--max_old_space_size=16000 && npm run nearley && npm run sass && node_modules/.bin/webpack --mode production --config webpack.prod.js",
+    "ci-build": "export NODE_OPTIONS=\"--max_old_space_size=16000 --openssl-legacy-provider\" && npm run nearley && npm run sass && node_modules/.bin/webpack --mode production --config webpack.prod.js",
     "build": "export NODE_OPTIONS=--max_old_space_size=16000  && npm run nearley && npm run sass && node_modules/.bin/webpack --mode production --config webpack.prod.js",
     "devstart": "npm run nearley && npm run sass -- --watch & npm run nodemon & npm run webpack-dev-server & npm run webpack -- --watch",
     "setup": "npm run nearley && npm run webpack -- --progress && node --max-old-space-size=4096 force_update.js",
     "cards": "node --max-old-space-size=4096 force_update.js",
-    "start": "npm install && npm run cards && node server.js",
+    "start": "npm install --legacy-peer-deps && npm run cards && node server.js",
     "sass": "sass scss:public/css/bootstrap --no-source-map",
     "run-daily-jobs": "sh jobs/definition/daily.sh",
     "run-weekly-jobs": "sh jobs/definition/weekly.sh",
