--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "devstart": "npm run nearley && npm run sass -- --watch & npm run nodemon & npm run webpack-dev-server & npm run webpack -- --watch",
     "setup": "npm run nearley && npm run webpack -- --progress && node --max-old-space-size=4096 force_update.js",
     "cards": "node --max-old-space-size=4096 force_update.js",
-    "start": "npm install --legacy-peer-deps && npm run cards && node server.js",
+    "start": "npm install && npm run cards && node server.js",
     "sass": "sass scss:public/css/bootstrap --no-source-map",
     "run-daily-jobs": "sh jobs/definition/daily.sh",
     "run-weekly-jobs": "sh jobs/definition/weekly.sh",
@@ -112,11 +112,10 @@
     "pug": "^3.0.1",
     "quickselect": "^2.0.0",
     "raw-loader": "^4.0.2",
-    "react": "^16.13.1",
     "react-audio-player": "^0.13.0",
     "react-chartjs-2": "^2.8.0",
     "react-csv": "^2.0.3",
-    "react-dnd": "^8.0.3",
+    "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^8.0.3",
     "react-dnd-touch-backend": "^10.0.2",
     "react-dom": "^16.13.1",
