--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Deploy prod to prod server
+name: Deploy master to dev server
 
 on:
   workflow_run:
@@ -24,6 +24,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
       
       - name: Cache node modules
         uses: actions/cache@v1
@@ -68,7 +72,7 @@ jobs:
           aws_access_key: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws_secret_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           application_name: CubeCobra
-          environment_name: Cubecobra-env-2
+          environment_name: cubecobra-prod
           region: us-east-2
           version_label: "cubecobra-${{ steps.format-time.outputs.replaced }}"
           deployment_package: deploy.zip
