--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "nodemon": "nodemon --max-old-space-size=4096 --ignore src --ignore public --ignore private --ignore temp --ignore dist/pages --ignore __tests__",
     "webpack": "webpack --max-old-space-size=8192 --mode development --config webpack.server.js",
     "webpack-dev-server": "node --max-old-space-size=8192 node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.dev.js",
-    "test-loud": "jest --detectOpenHandles  --coverage",
     "test": "npm run test-loud -- --silent",
     "test:watch": "npm run webpack -- --watch & npm run test-loud -- --watch --verbose false",
     "nearley": "sh nearley/helper.sh",
@@ -48,26 +47,19 @@
     "@babel/preset-react": "^7.9.4",
     "@primer/octicons-react": "^11.0.0",
     "@react-mock/fetch": "^0.3.0",
-    "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.4",
-    "assert": "^2.0.0",
     "aws-sdk": "^2.1253.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "bad-words": "^3.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
-    "chart.js": "^2.9.4",
-    "cheerio": "^1.0.0-rc.10",
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
-    "connect-mongodb-session": "^2.2.0",
     "core-js": "^3.6.3",
     "core-js-pure": "^3.6.3",
-    "crypto": "^1.0.1",
     "css-loader": "^3.4.2",
     "csurf": "^1.10.0",
     "dotenv": "^8.2.0",
@@ -83,13 +75,8 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
     "forever-monitor": "^3.0.3",
-    "glob": "^7.1.6",
     "html-to-text": "^5.1.1",
     "http": "0.0.1-security",
-    "jest-environment-jsdom-sixteen": "^1.0.3",
-    "jquery-ui": "^1.13.2",
-    "jquery-ui-dist": "^1.12.1",
-    "jsdom": "^16.2.2",
     "JSONStream": "^1.3.5",
     "lodash": "^4.17.21",
     "micromark": "^2.10.1",
@@ -110,29 +97,25 @@
     "prettier": "^2.3.0",
     "prop-types": "^15.7.2",
     "pug": "^3.0.1",
-    "quickselect": "^2.0.0",
     "raw-loader": "^4.0.2",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-audio-player": "^0.13.0",
-    "react-chartjs-2": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.0.3",
-    "react-dnd": "^5.0.0",
-    "react-dnd-html5-backend": "^3.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dnd-touch-backend": "^10.0.2",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-latex": "^2.0.0",
     "react-leaf-carousel": "^2.0.0",
-    "react-markdown": "^5.0.2",
-    "react-pivottable": "^0.9.0",
+    "react-markdown": "^8.0.5",
     "react-player": "^2.6.1",
     "react-qr-code": "^1.1.1",
-    "react-sortable-hoc": "^1.10.1",
+    "react-sortable-hoc": "^2.0.0",
     "react-syntax-highlighter": "^15.3.0",
-    "react-tag-input": "^6.4.1",
-    "react-tagcloud": "^2.0.0",
-    "react-timeago": "^4.4.0",
-    "react-transition-group": "^4.4.2",
+    "react-tag-input": "^6.8.1",
+    "react-timeago": "^7.1.0",
     "reactstrap": "^9.0.0",
     "redis": "^3.1.2",
     "remark-autolink-headings": "^6.0.1",
@@ -159,7 +142,6 @@
     "turndown": "^7.1.1",
     "unified": "^9.2.0",
     "unist-util-visit": "^2.0.3",
-    "use-scroll-position": "0.0.4",
     "util": "^0.12.4",
     "uuid": "^3.4.0",
     "webpack": "^4.43.0",
@@ -175,17 +157,15 @@
     "eslint-import-resolver-webpack": "^0.12.1",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.9.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "form-data": "^3.0.0",
-    "jest": "^26.0.1",
-    "mongodb-memory-server": "^6.9.6",
-    "nodemon": "^2.0.2",
-    "rimraf": "^3.0.0",
-    "sinon": "^7.4.2",
-    "supertest": "^6.1.3"
+    "nodemon": "^2.0.2"
+  },
+  "overrides": {
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1"
   }
 }
