--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "eslint": "eslint --no-error-on-unmatched-pattern --quiet `npm run --silent list-files`",
     "lint": "npm run prettier-base -- --check && npm run eslint",
     "nodemon": "nodemon --max-old-space-size=4096 --ignore src --ignore public --ignore private --ignore temp --ignore dist/pages --ignore __tests__",
-    "webpack": "webpack --max-old-space-size=8192 --mode development --config webpack.server.js",
-    "webpack-dev-server": "node --max-old-space-size=8192 node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.dev.js",
+    "webpack": "webpack --mode development --config webpack.server.js",
+    "webpack-dev-server": "npx webpack serve --config webpack.dev.js",
     "test": "npm run test-loud -- --silent",
     "test:watch": "npm run webpack -- --watch & npm run test-loud -- --watch --verbose false",
     "nearley": "sh nearley/helper.sh",
@@ -48,6 +48,7 @@
     "@primer/octicons-react": "^11.0.0",
     "@react-mock/fetch": "^0.3.0",
     "@testing-library/react": "^10.0.4",
+    "assert": "^2.0.0",
     "aws-sdk": "^2.1253.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
@@ -79,7 +80,7 @@
     "http": "0.0.1-security",
     "JSONStream": "^1.3.5",
     "lodash": "^4.17.21",
-    "micromark": "^2.10.1",
+    "micromark": "^3.1.0",
     "mongoose": "^5.12.10",
     "mongoose-seed": "^0.6.0",
     "nearley": "^2.19.3",
@@ -144,11 +145,10 @@
     "unist-util-visit": "^2.0.3",
     "util": "^0.12.4",
     "uuid": "^3.4.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2",
-    "webpack-node-externals": "^1.7.2"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -162,7 +162,8 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "form-data": "^3.0.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "webpack-dev-server": "^4.11.1"
   },
   "overrides": {
     "react-dnd": "^16.0.1",
