--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -71,7 +71,7 @@ jobs:
         with:
           aws_access_key: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws_secret_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          application_name: CubeCobra
+          application_name: cubecobra-beta
           environment_name: cubecobra-beta
           region: us-east-2
           version_label: "cubecobra-${{ steps.format-time.outputs.replaced }}"
