--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.2.6",
+    "clone": "^2.1.2",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "core-js": "^3.6.3",
