--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^4.2.1",
     "classnames": "^2.2.6",
     "clone": "^2.1.2",
     "compression": "^1.7.4",
