--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "react-timeago": "^7.1.0",
     "reactstrap": "^9.0.0",
     "redis": "^3.1.2",
+    "rehype-katex": "^6.0.2",
     "remark-autolink-headings": "^6.0.1",
     "remark-breaks": "^2.0.1",
     "remark-gfm": "^1.0.0",
