--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-loader": "^8.1.0",
     "bad-words": "^3.0.3",
     "bcryptjs": "^2.4.3",
+    "big-json": "^3.2.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^4.2.1",
@@ -64,7 +65,7 @@
     "core-js": "^3.6.3",
     "core-js-pure": "^3.6.3",
     "css-loader": "^3.4.2",
-    "csurf": "^1.10.0",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "dynamodb-store": "^1.2.0",
     "elo-rating": "^1.0.1",
@@ -140,6 +141,7 @@
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
     "socketio": "^1.0.0",
+    "stream": "^0.0.2",
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^5.3.6",
     "tmp": "^0.1.0",
