--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "sideEffects": "false",
   "browserslist": "> 0.5%, Firefox ESR, not dead, not IE > 0, not IE_Mob > 0, not safari < 7, not kaios > 0",
   "dependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.301.0",
     "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
