--- a/.env_EXAMPLE
+++ b/.env_EXAMPLE
@@ -1,21 +1,24 @@
 AWS_ACCESS_KEY_ID=""
-AWS_LOG_GROUP="CUBECOBRA"
-AWS_LOG_STREAM="local"
-AWS_REGION="us-east-2"
+AWS_LOG_GROUP=""
+AWS_LOG_STREAM=""
+AWS_REGION=""
 AWS_SECRET_ACCESS_KEY=""
 CUBECOBRA_VERSION="x.x.x"
-DATA_BUCKET="cubecobra-data-dev"
+DATA_BUCKET=""
 DOMAIN="localhost:8080"
 DOWNTIME_ACTIVE="false"
-DYNAMO_PREFIX="DEV"
+DYNAMO_PREFIX="LOCAL"
 EMAIL_CONFIG_PASSWORD=""
 EMAIL_CONFIG_USERNAME=""
 ENV="development"
 FLASKROOT="http://167.172.233.110"
 HOST="https://cubecobra.com"
-LOG_RETENTION_DAYS="7"
 NITROPAY_ENABLED="false"
 NODE_ENV="development"
+PATREON_CLIENT_ID=""
+PATREON_CLIENT_SECRET=""
+PATREON_HOOK_SECRET=""
+PATREON_REDIRECT=""
 PORT="5000"
 REDIS_HOST="redis://localhost:6379"
 REDIS_SETUP="true"
@@ -24,3 +27,6 @@ SESSION_SECRET="session_secret"
 SESSION="session"
 TCG_PLAYER_PRIVATE_KEY=""
 TCG_PLAYER_PUBLIC_KEY=""
+CACHE_ENABLED="false"
+AUTOSCALING_GROUP=""
+CACHE_SECRET=""
