--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
     "prettier-head": "prettier --write $(git diff HEAD --name-only | grep -E '.js$')",
     "eslint": "eslint --no-error-on-unmatched-pattern --quiet `npm run --silent list-files`",
     "lint": "npm run prettier-base -- --check && npm run eslint",
-    "nodemon": "nodemon --max-old-space-size=4096 --ignore src --ignore public --ignore private --ignore temp --ignore dist/pages --ignore __tests__",
+    "nodemon": "nodemon --max-old-space-size=8000 --ignore src --ignore public --ignore private --ignore temp --ignore dist/pages --ignore __tests__",
     "webpack": "webpack --mode development --config webpack.server.js",
     "webpack-dev-server": "npx webpack serve --config webpack.dev.js",
     "test": "npm run test-loud -- --silent",
     "test:watch": "npm run webpack -- --watch & npm run test-loud -- --watch --verbose false",
     "nearley": "sh nearley/helper.sh",
+    "download-model": "node jobs/download_model.js",
     "ci-build": "export NODE_OPTIONS=--max_old_space_size=16000 && npm run nearley && npm run sass && node_modules/.bin/webpack --mode production --config webpack.prod.js",
     "build": "export NODE_OPTIONS=--max_old_space_size=16000  && npm run nearley && npm run sass && node_modules/.bin/webpack --mode production --config webpack.prod.js",
     "devstart": "npm run nearley && npm run sass -- --watch & npm run nodemon & npm run webpack-dev-server & npm run webpack -- --watch",
-    "setup": "npm run nearley && npm run webpack -- --progress && node --max-old-space-size=4096 force_update.js",
-    "cards": "node --max-old-space-size=4096 force_update.js",
-    "start": "npm install && npm run cards && node server.js",
+    "setup": "npm run nearley && npm run webpack -- --progress && node --max-old-space-size=8000 force_update.js",
+    "cards": "node --max-old-space-size=8000 force_update.js",
+    "start": "npm install && npm run cards && npm run download-model && node server.js",
     "sass": "sass scss:public/css/bootstrap --no-source-map",
     "run-daily-jobs": "sh jobs/definition/daily.sh",
     "run-weekly-jobs": "sh jobs/definition/weekly.sh",
@@ -48,6 +49,7 @@
     "@babel/preset-react": "^7.9.4",
     "@primer/octicons-react": "^11.0.0",
     "@react-mock/fetch": "^0.3.0",
+    "@tensorflow/tfjs-node": "^4.4.0",
     "@testing-library/react": "^10.0.4",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1253.0",
