chore(config): update npm install to npm ci

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,7 +15,7 @@ jobs:
       with:
         node-version: 16
     - name: Setup
-      run: npm install
+      run: npm ci
     - name: Build
       run: npm run ci-build
     - name: Check Code Style
