--- a/package.json
+++ b/package.json
@@ -128,13 +128,13 @@
     "react-timeago": "^7.1.0",
     "reactstrap": "^9.0.0",
     "redis": "^3.1.2",
+    "rehype-autolink-headings": "^6.1.1",
     "rehype-katex": "^6.0.2",
-    "remark-autolink-headings": "^6.0.1",
+    "rehype-slug": "^5.1.0",
     "remark-breaks": "^2.0.1",
     "remark-gfm": "^1.0.0",
     "remark-math": "^4.0.0",
     "remark-parse": "^9.0.0",
-    "remark-slug": "^6.0.0",
     "request": "^2.88.0",
     "rss": "^1.2.2",
     "rss-parser": "^3.9.0",
