--- a/package.json
+++ b/package.json
@@ -90,6 +90,10 @@
     "JSONStream": "^1.3.5",
     "lodash": "^4.17.21",
     "micromark": "^3.1.0",
+    "micromark-factory-space": "^2.0.0",
+    "micromark-util-character": "^2.0.1",
+    "micromark-util-chunked": "^2.0.0",
+    "micromark-util-symbol": "^2.0.0",
     "mongoose": "^5.12.10",
     "mongoose-seed": "^0.6.0",
     "nearley": "^2.19.3",
