--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.301.0",
     "@babel/core": "^7.23.2",
+    "@babel/eslint-parser": "^7.22.15",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@babel/preset-env": "^7.9.6",
@@ -56,7 +57,6 @@
     "@testing-library/react": "^10.0.4",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1478.0",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
