fix patreon integration and featured cubes

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "devstart": "npm run nearley && npm run sass -- --watch & npm run nodemon & npm run webpack-dev-server & npm run webpack -- --watch",
     "setup": "npm run nearley && npm run webpack -- --progress && node --max-old-space-size=8000 force_update.js",
     "cards": "node --max-old-space-size=6000 force_update.js",
-    "start": "npm ci && npm run cards && node server.js",
+    "download-model": "node --max-old-space-size=4096 jobs/download_model.js",
+    "start": "npm ci && npm run cards && npm run download-model && node server.js",
     "sass": "sass scss:public/css/bootstrap --no-source-map",
     "update-draft-history": "node --max-old-space-size=4096 jobs/update_draft_history.js",
     "update-cube-history": "node --max-old-space-size=4096 jobs/update_cube_history.js",
