/cube/api/history/:id is a POST request, lastKey is passed in through request body

--- a/.gitignore
+++ b/.gitignore
@@ -556,5 +556,5 @@ MigrationBackup/
 # End of https://www.gitignore.io/api/node,komodoedit,webstorm+all,visualstudio,visualstudiocode
 push-docker.ps1
 
-# asdf
+# asdf version manager config (https://asdf-vm.com)
 .tool-versions
