--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "app.js",
   "engines": {
-    "node": ">=16.0.0 <17.0.0"
+    "node": ">=16.0.0"
   },
   "scripts": {
     "bash": "bash",
@@ -54,13 +54,14 @@
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
-    "@primer/octicons-react": "^11.0.0",
+    "@primer/octicons-react": "^19.11.0",
     "@react-mock/fetch": "^0.3.0",
     "@tensorflow/tfjs-node": "^4.12.0",
-    "@testing-library/react": "^10.0.4",
+    "@testing-library/react": "^16.0.0",
+    "JSONStream": "^1.3.5",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1478.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^9.1.3",
     "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "big-json": "^3.2.0",
@@ -73,40 +74,39 @@
     "connect-flash": "^0.1.1",
     "core-js": "^3.33.1",
     "core-js-pure": "^3.33.1",
-    "css-loader": "^6.8.1",
+    "css-loader": "^7.1.2",
     "csurf": "^1.11.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.4.5",
     "dynamodb-store": "^1.2.0",
     "elo-rating": "^1.0.1",
-    "email-templates": "^11.1.1",
+    "email-templates": "^12.0.1",
     "event-stream": "^4.0.1",
     "events": "^3.3.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.1.9",
     "express-messages": "^1.0.1",
-    "express-rate-limit": "^5.1.3",
+    "express-rate-limit": "^7.4.0",
     "express-session": "^1.17.3",
-    "express-validator": "^6.4.0",
+    "express-validator": "^7.1.0",
     "forever-monitor": "^3.0.3",
-    "html-to-text": "^5.1.1",
+    "html-to-text": "^9.0.5",
     "http": "0.0.1-security",
-    "JSONStream": "^1.3.5",
     "lodash": "^4.17.21",
-    "micromark": "^3.1.0",
+    "micromark": "^4.0.0",
     "micromark-factory-space": "^2.0.0",
     "micromark-util-character": "^2.0.1",
     "micromark-util-chunked": "^2.0.0",
     "micromark-util-symbol": "^2.0.0",
-    "mongoose": "^5.13.21",
+    "mongoose": "^8.5.1",
     "mongoose-seed": "^0.6.0",
     "nearley": "^2.19.3",
     "node-cache": "^5.1.2",
-    "node-fetch": "^2.6.7",
-    "node-schedule": "^1.3.2",
+    "node-fetch": "^3.3.2",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.4.16",
     "on-finished": "^2.3.0",
     "papaparse": "^5.2.0",
-    "passport": "^0.6.0",
+    "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "patreon": "^0.4.1",
@@ -115,59 +115,59 @@
     "prop-types": "^15.7.2",
     "pug": "^3.0.1",
     "raw-loader": "^4.0.2",
-    "react": "^17.0.2",
-    "react-audio-player": "^0.13.0",
+    "react": "^18.3.1",
+    "react-audio-player": "^0.17.0",
     "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.0.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dnd-touch-backend": "^10.0.2",
-    "react-dom": "^17.0.2",
+    "react-dnd-touch-backend": "^16.0.1",
+    "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-latex": "^2.0.0",
-    "react-leaf-carousel": "^2.0.0",
-    "react-markdown": "^8.0.5",
+    "react-leaf-carousel": "^3.0.0",
+    "react-markdown": "^9.0.1",
     "react-player": "^2.6.1",
-    "react-qr-code": "^1.1.1",
     "react-sortable-hoc": "^2.0.0",
     "react-syntax-highlighter": "^15.3.0",
     "react-tag-input": "^6.8.1",
     "react-timeago": "^7.1.0",
-    "reactstrap": "^9.0.0",
-    "redis": "^3.1.2",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-katex": "^6.0.2",
-    "rehype-slug": "^5.1.0",
-    "remark-breaks": "^2.0.1",
-    "remark-gfm": "^1.0.0",
-    "remark-math": "^4.0.0",
-    "remark-parse": "^9.0.0",
+    "reactstrap": "^9.2.2",
+    "redis": "^4.6.15",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-katex": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
     "rss": "^1.2.2",
     "rss-parser": "^3.13.0",
     "sanitize-html": "^2.11.0",
     "sass": "^1.44.0",
     "seedrandom": "^3.0.5",
-    "serialize-javascript": "^3.1.0",
-    "sharp": "^0.32.6",
+    "serialize-javascript": "^6.0.2",
+    "sharp": "^0.33.4",
     "shuffle-seed": "^1.1.6",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
-    "stream": "^0.0.2",
-    "style-loader": "^1.1.3",
+    "stream": "^0.0.3",
+    "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.6",
-    "tmp": "^0.1.0",
+    "tmp": "^0.2.3",
     "turndown": "^7.1.1",
-    "unified": "^9.2.0",
-    "unist-util-visit": "^2.0.3",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
     "util": "^0.12.4",
-    "uuid": "^3.4.0",
+    "uuid": "^10.0.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.0.1",
-    "webpack-merge": "^5.8.0",
+    "webpack-merge": "^6.0.1",
     "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.52.0",
+    "@types/react": "^18.3.3",
+    "eslint": "^9.8.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-webpack": "^0.13.7",
@@ -177,9 +177,10 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "form-data": "^3.0.0",
+    "form-data": "^4.0.0",
     "nodemon": "^3.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "typescript": "^5.5.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "overrides": {
     "react-dnd": "^16.0.1",
