--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,18 @@
             "res/*": ["./src/res/*"],
             "utils/*": ["./src/utils/*"]
         },
-        "target": "ES2020"
+
+        /* Bundler mode */
+        "allowImportingTsExtensions": true,
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "moduleDetection": "force",
+        "noEmit": true,
+
+        /* Linting */
+        "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true
     }
 }
