--- a/package.json
+++ b/package.json
@@ -3,65 +3,54 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "main": "app.js",
-  "engines": {
-    "node": ">=16.0.0"
-  },
+  "type": "module",
   "scripts": {
+    "build": "yarn run nearley && yarn run sass && tsc -b && node build.mjs",
+    "lint": "prettier-base -- --check && eslint . --ext js,ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
     "bash": "bash",
-    "beautify": "npm run prettier",
+    "beautify": "yarn run prettier",
     "list-files": "bash -c 'shopt -s nullglob\n echo {__tests__,fixtures,jobs,models,one_shot_scripts,public/js,routes,serverjs,src}/{**/*,*}.js *.js'",
-    "prettier-base": "prettier `npm run --silent list-files`",
-    "prettier": "npm run prettier-base -- --write",
-    "prettier-master": "prettier --write $(git diff master --name-only | grep -E '.js$')",
-    "prettier-head": "prettier --write $(git diff HEAD --name-only | grep -E '.js$')",
-    "eslint": "eslint --no-error-on-unmatched-pattern --quiet `npm run --silent list-files`",
-    "lint": "npm run prettier-base -- --check && npm run eslint",
+    "prettier-base": "prettier `yarn run --silent list-files`",
+    "prettier": "yarn run prettier-base -- --write",
+    "prettier-master": "prettier --write $(git diff master --name-only | grep -E '.[jt]sx?$')",
+    "prettier-head": "prettier --write $(git diff HEAD --name-only | grep -E '.[jt]sx?$')",
+    "eslint": "eslint --no-error-on-unmatched-pattern --quiet `yarn run --silent list-files`",
     "nodemon": "nodemon --max-old-space-size=6000 --ignore src --ignore public --ignore private --ignore temp --ignore dist/pages --ignore __tests__",
     "webpack": "webpack --mode development --config webpack.server.js",
     "webpack-dev-server": "npx webpack serve --config webpack.dev.js",
-    "test": "npm run test-loud -- --silent",
-    "test:watch": "npm run webpack -- --watch & npm run test-loud -- --watch --verbose false",
+    "test": "yarn run test-loud -- --silent",
+    "test:watch": "yarn run webpack -- --watch & yarn run test-loud -- --watch --verbose false",
     "nearley": "sh nearley/helper.sh",
-    "ci-build": "export NODE_OPTIONS=--max_old_space_size=16000 && npm run nearley && npm run sass && node_modules/.bin/webpack --mode production --config webpack.prod.js",
-    "build": "export NODE_OPTIONS=--max_old_space_size=16000  && npm run nearley && npm run sass && node_modules/.bin/webpack --mode production --config webpack.prod.js",
-    "devstart": "npm run nearley && npm run sass -- --watch & npm run nodemon & npm run webpack-dev-server & npm run webpack -- --watch",
-    "setup": "npm run nearley && npm run webpack -- --progress && node --max-old-space-size=8000 force_update.js",
+    "ci-build": "export NODE_OPTIONS=--max_old_space_size=16000 && yarn run nearley && yarn run sass && node_modules/.bin/webpack --mode production --config webpack.prod.js",
+    "devstart": "yarn run nearley && yarn run sass -- --watch & yarn run nodemon & yarn run webpack-dev-server & yarn run webpack -- --watch",
+    "setup": "yarn run nearley && yarn run webpack -- --progress && node --max-old-space-size=8000 force_update.js",
     "cards": "node --max-old-space-size=6000 force_update.js",
     "download-model": "node --max-old-space-size=4096 jobs/download_model.js",
-    "start": "npm ci && npm run cards && npm run download-model && node server.js",
+    "start": "yarn ci && yarn run cards && yarn run download-model && node server.js",
     "sass": "sass scss:public/css/bootstrap --no-source-map",
     "update-draft-history": "node --max-old-space-size=4096 jobs/update_draft_history.js",
     "update-cube-history": "node --max-old-space-size=4096 jobs/update_cube_history.js",
     "update-metadata-dict": "node --max-old-space-size=4096 jobs/update_metadata_dict.js",
     "update-cards": "node --max-old-space-size=4096 jobs/update_cards.js",
-    "update-all": "npm run update-draft-history && npm run update-cube-history && npm run update-metadata-dict && npm run update-cards",
+    "update-all": "yarn run update-draft-history && yarn run update-cube-history && yarn run update-metadata-dict && yarn run update-cards",
     "update-hashes": "node --max-old-space-size=4096 jobs/repair_hashes.js",
     "upload-exports": "aws s3 sync temp/export s3://cubecobra",
-    "exports": "node --max-old-space-size=4096 jobs/export_cubes.js && node --max-old-space-size=4096 jobs/export_decks.js && node --max-old-space-size=4096 jobs/export_simple_card_dict.js && npm run upload-exports",
+    "exports": "node --max-old-space-size=4096 jobs/export_cubes.js && node --max-old-space-size=4096 jobs/export_decks.js && node --max-old-space-size=4096 jobs/export_simple_card_dict.js && yarn run upload-exports",
     "rotate-queue": "node --max-old-space-size=4096 jobs/rotate_featured.js",
     "sync-podcasts": "node --max-old-space-size=4096 jobs/update_podcasts.js"
   },
   "author": "Gwen Dekker",
   "license": "ISC",
-  "sideEffects": "false",
+  "sideEffects": false,
   "browserslist": "> 0.5%, Firefox ESR, not dead, not IE > 0, not IE_Mob > 0, not safari < 7, not kaios > 0",
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.433.0",
-    "@babel/core": "^7.23.2",
-    "@babel/eslint-parser": "^7.22.15",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
     "@primer/octicons-react": "^19.11.0",
-    "@react-mock/fetch": "^0.3.0",
     "@tensorflow/tfjs-node": "^4.12.0",
-    "@testing-library/react": "^16.0.0",
     "JSONStream": "^1.3.5",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1478.0",
-    "babel-loader": "^9.1.3",
     "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "big-json": "^3.2.0",
@@ -74,7 +63,6 @@
     "connect-flash": "^0.1.1",
     "core-js": "^3.33.1",
     "core-js-pure": "^3.33.1",
-    "css-loader": "^7.1.2",
     "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "dynamodb-store": "^1.2.0",
@@ -108,13 +96,11 @@
     "papaparse": "^5.2.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7",
     "patreon": "^0.4.1",
     "performance-now": "^2.1.0",
     "prettier": "^3.0.3",
     "prop-types": "^15.7.2",
     "pug": "^3.0.1",
-    "raw-loader": "^4.0.2",
     "react": "^18.3.1",
     "react-audio-player": "^0.17.0",
     "react-chartjs-2": "^5.2.0",
@@ -152,38 +138,30 @@
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "stream": "^0.0.3",
-    "style-loader": "^4.0.0",
-    "terser-webpack-plugin": "^5.3.6",
     "tmp": "^0.2.3",
     "turndown": "^7.1.1",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "util": "^0.12.4",
-    "uuid": "^10.0.0",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-merge": "^6.0.1",
-    "webpack-node-externals": "^3.0.0"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/eslint-parser": "^7.22.15",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-transform-optional-chaining": "^7.9.0",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@react-mock/fetch": "^0.3.0",
+    "@testing-library/react": "^16.0.0",
     "@types/react": "^18.3.3",
-    "eslint": "^9.8.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-webpack": "^0.13.7",
-    "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "form-data": "^4.0.0",
-    "nodemon": "^3.0.1",
-    "typescript": "^5.5.4",
-    "webpack-dev-server": "^5.0.4"
-  },
-  "overrides": {
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1"
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "esbuild": "^0.23.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "typescript": "^5.2.2"
   }
 }
