--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "core-js": "^3.33.1",
-    "core-js-pure": "^3.33.1",
     "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "dynamodb-store": "^1.2.0",
@@ -154,6 +153,7 @@
     "@babel/preset-react": "^7.9.4",
     "@react-mock/fetch": "^0.3.0",
     "@testing-library/react": "^16.0.0",
+    "@types/core-js": "^2.5.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
