--- a/package.json
+++ b/package.json
@@ -154,8 +154,11 @@
     "@react-mock/fetch": "^0.3.0",
     "@testing-library/react": "^16.0.0",
     "@types/core-js": "^2.5.8",
+    "@types/nearley": "^2.11.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-latex": "^2.0.3",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/react-timeago": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
