--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "yarn run nearley && yarn run sass && tsc -b && node build.mjs",
+    "build": "yarn run nearley && yarn run sass && tsc -b && yarn run webpack",
     "lint": "yarn run prettier-base --check && eslint --max-warnings 0",
     "preview": "vite preview",
     "bash": "bash",
@@ -113,6 +113,7 @@
     "react-leaf-carousel": "^3.0.0",
     "react-markdown": "^9.0.1",
     "react-player": "^2.6.1",
+    "react-qr-code": "^2.0.15",
     "react-sortable-hoc": "^2.0.0",
     "react-syntax-highlighter": "^15.3.0",
     "react-tag-input": "^6.8.1",
@@ -148,10 +149,10 @@
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@babel/eslint-parser": "^7.22.15",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-transform-optional-chaining": "^7.9.0",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.7",
+    "@babel/plugin-transform-optional-chaining": "^7.24.8",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.24.7",
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
     "@react-mock/fetch": "^0.3.0",
@@ -176,7 +177,10 @@
     "globals": "^15.9.0",
     "raw-loader": "^4.0.2",
     "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.0.0"
+    "typescript-eslint": "^8.0.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   }
 }
