Update package.json and readme.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "scripts": {
     "build": "yarn run nearley && yarn run sass && tsc -b && yarn run webpack",
     "lint": "yarn run prettier-base --check && eslint --max-warnings 0",
-    "preview": "vite preview",
     "bash": "bash",
     "beautify": "yarn run prettier",
     "list-files": "bash -c 'shopt -s nullglob\n echo {__tests__,fixtures,jobs,models,one_shot_scripts,public/js,routes,serverjs,src}/{**/*,*}.{js,jsx,ts,tsx} *.{js,jsx,ts,tsx}'",
@@ -18,7 +17,7 @@
     "prettier": "yarn run prettier-base --write",
     "prettier-master": "prettier --write $(git diff master --name-only | grep -E '.[jt]sx?$')",
     "prettier-head": "prettier --write $(git diff HEAD --name-only | grep -E '.[jt]sx?$')",
-    "eslint": "eslint --no-error-on-unmatched-pattern --quiet `yarn run --silent list-files`",
+    "eslint": "eslint --quiet `yarn run --silent list-files`",
     "nodemon": "nodemon --max-old-space-size=6000 --ignore src --ignore public --ignore private --ignore temp --ignore dist/pages --ignore __tests__",
     "webpack": "webpack --mode development --config webpack.server.mjs",
     "webpack-dev-server": "npx webpack serve --config webpack.dev.mjs",
@@ -30,7 +29,7 @@
     "setup": "yarn run nearley && yarn run webpack --progress && node --max-old-space-size=8000 force_update.js",
     "cards": "node --max-old-space-size=6000 force_update.js",
     "download-model": "node --max-old-space-size=4096 jobs/download_model.js",
-    "start": "yarn ci && yarn run cards && yarn run download-model && node server.js",
+    "start": "yarn install --frozen-lockfile && yarn run cards && yarn run download-model && node server.js",
     "sass": "sass scss:public/css/bootstrap --no-source-map",
     "update-draft-history": "node --max-old-space-size=4096 jobs/update_draft_history.js",
     "update-cube-history": "node --max-old-space-size=4096 jobs/update_cube_history.js",
