Remove backticks from package.json.

--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "bash": "bash",
     "beautify": "yarn run prettier",
     "list-files": "bash -c 'shopt -s nullglob\n echo {__tests__,fixtures,jobs,models,one_shot_scripts,public/js,routes,serverjs,src}/{**/*,*}.{js,jsx,ts,tsx} *.{js,jsx,ts,tsx}'",
-    "prettier-base": "prettier `yarn run --silent list-files`",
+    "prettier-base": "prettier $(yarn run --silent list-files)",
     "prettier": "yarn run prettier-base --write",
     "prettier-master": "prettier --write $(git diff master --name-only | grep -E '.[jt]sx?$')",
     "prettier-head": "prettier --write $(git diff HEAD --name-only | grep -E '.[jt]sx?$')",
-    "eslint": "eslint --quiet `yarn run --silent list-files`",
+    "eslint": "eslint --quiet $(yarn run --silent list-files)",
     "nodemon": "nodemon --max-old-space-size=6000 --ignore src --ignore public --ignore private --ignore temp --ignore dist/pages --ignore __tests__",
     "webpack": "webpack --mode development --config webpack.server.mjs",
     "webpack-dev-server": "npx webpack serve --config webpack.dev.mjs",
