--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "yarn run prettier-base --check && eslint --max-warnings 0",
     "bash": "bash",
     "beautify": "yarn run prettier",
-    "list-files": "bash -c 'shopt -s nullglob\n echo {__tests__,fixtures,jobs,models,one_shot_scripts,public/js,routes,serverjs,src}/{**/*,*}.{js,jsx,ts,tsx} *.{js,jsx,ts,tsx}'",
+    "list-files": "bash -c 'shopt -s nullglob\n echo {__tests__,fixtures,jobs,models,one_shot_scripts,public/js,routes,serverjs,src}/{**/*,*}.{js,jsx,ts,tsx} app.js webpack.*.mjs *.config.mjs'",
     "prettier-base": "prettier $(yarn run --silent list-files)",
     "prettier": "yarn run prettier-base --write",
     "prettier-master": "prettier --write $(git diff master --name-only | grep -E '.[jt]sx?$')",
