--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "test": "yarn run test-loud --silent",
     "test:watch": "yarn run webpack --watch & yarn run test-loud --watch --verbose false",
     "nearley": "sh nearley/helper.sh",
-    "ci-build": "export NODE_OPTIONS=--max_old_space_size=16000 && yarn run nearley && yarn run sass && node_modules/.bin/webpack --mode production --config webpack.prod.js",
+    "ci-build": "yarn run nearley && yarn run sass && NODE_OPTIONS=--max_old_space_size=16384 webpack --mode production --config webpack.prod.js",
     "devstart": "yarn run nearley && yarn run sass --watch & yarn run nodemon & yarn run webpack-dev-server & yarn run webpack --watch",
-    "setup": "yarn run nearley && yarn run webpack --progress && node --max-old-space-size=8000 force_update.js",
+    "setup": "yarn run nearley && yarn run webpack --progress && node --max-old-space-size=8192 force_update.js",
     "cards": "node --max-old-space-size=6000 force_update.js",
     "download-model": "node --max-old-space-size=4096 jobs/download_model.js",
-    "start": "yarn install --frozen-lockfile && yarn run cards && yarn run download-model && node server.js",
+    "start": "yarn install --immutable --immutable-cache && yarn run cards && yarn run download-model && node server.js",
     "sass": "sass scss:public/css/bootstrap --no-source-map",
     "update-draft-history": "node --max-old-space-size=4096 jobs/update_draft_history.js",
     "update-cube-history": "node --max-old-space-size=4096 jobs/update_cube_history.js",
