--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Enable Corepack
         run: corepack enable
       - name: Setup
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable --immutable-cache
       - name: Check Code Style
         run: yarn run lint
       - name: Build
