--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "setup": "yarn run nearley && yarn run webpack --progress && node --max-old-space-size=8192 force_update.js",
     "cards": "node --max-old-space-size=6000 force_update.js",
     "download-model": "node --max-old-space-size=4096 jobs/download_model.js",
-    "start": "yarn install --immutable --immutable-cache && yarn run cards && yarn run download-model && node server.js",
+    "start": "yarn install --immutable && yarn run cards && yarn run download-model && node server.js",
     "sass": "sass scss:public/css/bootstrap --no-source-map",
     "update-draft-history": "node --max-old-space-size=4096 jobs/update_draft_history.js",
     "update-cube-history": "node --max-old-space-size=4096 jobs/update_cube_history.js",
