Fix yarn config.

--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "lint": "yarn run prettier-base --check && yarn run eslint --max-warnings 0",
     "bash": "bash",
     "beautify": "yarn run prettier",
-    "list-files": "bash -c 'shopt -s nullglob\n echo {__tests__,fixtures,jobs,models,one_shot_scripts,public/js,routes,serverjs,src}/{**/*,*}.{js,jsx,ts,tsx} app.js webpack.*.mjs *.config.mjs'",
+    "list-files": "bash -c 'shopt -s nullglob\n echo {__tests__,fixtures,jobs,models,one_shot_scripts,public/js,routes,serverjs,src}/{**/*,*}.{js,jsx,ts,tsx} {app,force_update,server}.js webpack.*.mjs eslint.config.mjs babel.config.mjs'",
     "prettier-base": "prettier $(yarn run --silent list-files)",
     "prettier": "yarn run prettier-base --write",
-    "prettier-master": "prettier --write $(git diff master --name-only | grep -E '.[jt]sx?$')",
-    "prettier-head": "prettier --write $(git diff HEAD --name-only | grep -E '.[jt]sx?$')",
+    "prettier-master": "prettier --write $(git diff master --name-only | grep -E '.m?[jt]sx?$')",
+    "prettier-head": "prettier --write $(git diff HEAD --name-only | grep -E '.m?[jt]sx?$')",
     "eslint": "eslint --quiet $(yarn run --silent list-files)",
     "nodemon": "nodemon --max-old-space-size=6000 --ignore src --ignore public --ignore private --ignore temp --ignore dist/pages --ignore __tests__",
     "webpack": "webpack --mode development --config webpack.server.mjs",
@@ -24,7 +24,7 @@
     "test": "yarn run test-loud --silent",
     "test:watch": "yarn run webpack --watch & yarn run test-loud --watch --verbose false",
     "nearley": "sh nearley/helper.sh",
-    "ci-build": "yarn run nearley && yarn run sass && NODE_OPTIONS=--max_old_space_size=16384 webpack --mode production --config webpack.prod.js",
+    "ci-build": "yarn run nearley && yarn run sass && tsc -b && NODE_OPTIONS=--max_old_space_size=16384 node_modules/.bin/webpack --mode production --config webpack.prod.mjs",
     "devstart": "yarn run nearley && yarn run sass --watch & yarn run nodemon & yarn run webpack-dev-server & yarn run webpack --watch",
     "setup": "yarn run nearley && yarn run webpack --progress && node --max-old-space-size=8192 force_update.js",
     "cards": "node --max-old-space-size=6000 force_update.js",
