feat(contributing) streamling first time setup of application
this PR adds more detail to README about key application concepts as well as
scripting the initial setup of running a local instance of CubeCobra.

Running a local instance of CubeCobra is facilitated throug the use of LocalStack,
an AWS emulation that can be run locally. This allows for creation of s3 buckets,
dynamodb tables and cloudwatch log indexes without having an AWS account.

--- a/.env_EXAMPLE
+++ b/.env_EXAMPLE
@@ -1,10 +1,12 @@
-AWS_ACCESS_KEY_ID=""
-AWS_LOG_GROUP=""
+AWS_PROFILE="localstack"
+AWS_ACCESS_KEY_ID="test"
+AWS_LOG_GROUP="local"
 AWS_LOG_STREAM=""
-AWS_REGION=""
-AWS_SECRET_ACCESS_KEY=""
+AWS_REGION="us-east-1"
+AWS_SECRET_ACCESS_KEY="test"
+AWS_ENDPOINT=http://localhost:4566
 CUBECOBRA_VERSION="x.x.x"
-DATA_BUCKET=""
+DATA_BUCKET="local"
 DOMAIN="localhost:8080"
 DOWNTIME_ACTIVE="false"
 DYNAMO_PREFIX="LOCAL"
