stream export for cube and cards

--- a/package.json
+++ b/package.json
@@ -38,9 +38,13 @@
     "update-all": "yarn run update-draft-history && yarn run update-cube-history && yarn run update-metadata-dict && yarn run update-cards",
     "update-hashes": "node --max-old-space-size=4096 jobs/repair_hashes.js",
     "upload-exports": "aws s3 sync temp/export s3://cubecobra",
-    "exports": "node --max-old-space-size=4096 jobs/export_cubes.js && node --max-old-space-size=4096 jobs/export_decks.js && node --max-old-space-size=4096 jobs/export_simple_card_dict.js && yarn run upload-exports",
-    "rotate-queue": "node --max-old-space-size=4096 jobs/rotate_featured.js",
-    "sync-podcasts": "node --max-old-space-size=4096 jobs/update_podcasts.js",
+    "export:cubes": "node --max-old-space-size=8192 jobs/export_cubes.js",
+    "export:decks": "node --max-old-space-size=8192 jobs/export_decks.js",
+    "export:cards": "node --max-old-space-size=8192 jobs/export_simple_card_dict.js",
+    "export:all": "yarn export:cubes && yarn export:decks && yarn export:cards",
+    "exports": "yarn export:all && yarn run upload-exports",
+    "rotate-queue": "node --max-old-space-size=8192 jobs/rotate_featured.js",
+    "sync-podcasts": "node --max-old-space-size=8192 jobs/update_podcasts.js",
     "start:localstack": "./scripts/local/start_localstack.sh",
     "setup:local": "yarn start:localstack && yarn setup:local:env && yarn setup:local:localstack && yarn setup:local:files && yarn setup:local:db && yarn update-cards",
     "setup:local:localstack": "./scripts/init_localstack.sh",
