Migrate lambdas to be versioned

--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.0.3",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-latex": "^2.0.0",
     "react-leaf-carousel": "^3.0.0",
@@ -169,6 +170,7 @@
     "@types/nearley": "^2.11.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/react-timeago": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
