Migrate draft page

--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "@primer/octicons-react": "^19.11.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tensorflow/tfjs-node": "^4.12.0",
-    "JSONStream": "^1.3.5",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1478.0",
     "bad-words": "^3.0.4",
@@ -93,6 +92,7 @@
     "forever-monitor": "^1.7.2",
     "html-to-text": "^9.0.5",
     "http": "0.0.1-security",
+    "JSONStream": "^1.3.5",
     "lodash": "^4.17.21",
     "micromark": "^4.0.0",
     "micromark-factory-space": "^2.0.0",
@@ -148,6 +148,8 @@
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "stream": "^0.0.3",
+    "stream-chain": "^3.3.2",
+    "stream-json": "^1.9.1",
     "tmp": "^0.2.3",
     "turndown": "^7.1.1",
     "unified": "^11.0.5",
